Implements section headers

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,6 @@
 @use 'abstracts';
 @use 'layout';
+@use 'components';
 body,
 html {
   background: map-get(abstracts.$colors, "theme", "background");
