--- a/styles/components/_headers.scss
+++ b/styles/components/_headers.scss
@@ -1,6 +1,7 @@
 @use 'abstracts' as ab;
 .section-header{
     @include ab.text-primary;
+    margin-top: 0;
     letter-spacing: 4px;
     font-weight: 500;
     text-transform: uppercase;
@@ -14,4 +15,12 @@
         left:0;
         @include ab.bg-primary;
     }
+}
+
+.page-header {
+    @include ab.text-primary;
+    font-weight: 400;
+    font-size: 32px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
 }
