--- a/styles/layout/_grid.scss
+++ b/styles/layout/_grid.scss
@@ -6,10 +6,22 @@
 }
 
 .layout-grid{
-    width: 1200px;
+    @include ab.width-default;
     align-self:center;
     display: grid;
-    grid-template-columns: 0.6fr 0.4fr;
     grid-gap: 40px;
+    justify-content:center;
+    grid-template-columns: 0.9fr;
+    @include ab.respond-to('medium') {
+        grid-template-columns: 0.6fr 0.4fr;
+    }
 }
 
+.sidebar {
+    @include ab.flex-column;
+    //TODO: This can be added only if there's a page title
+
+}
+.sidebar-margin {
+    margin-top: 89px;
+}
