--- a/styles/layout/_navigation.scss
+++ b/styles/layout/_navigation.scss
@@ -13,16 +13,19 @@
     }
 }
 .upper-nav {
-    @include ab.flex-row;
-    @include ab.bg-primary;
-    width: 100%;
-    justify-content: center;
-    & > .wrapper > a {
-        @include ab.text-white;
-        text-decoration: none;
-        margin: 0 20px;
-        &:last-child {
-            margin: 0 0 0 20px;
+    display: none;
+    @include ab.respond-to('medium') {
+        @include ab.flex-row;
+        @include ab.bg-primary;
+        width: 100%;
+        justify-content: center;
+        & > .wrapper > a {
+            @include ab.text-white;
+            text-decoration: none;
+            margin: 0 20px;
+            &:last-child {
+                margin: 0 0 0 20px;
+            }
         }
     }
 }
@@ -30,6 +33,29 @@
 .logo {
     height: 80px;
     margin-right: auto;
+    margin-left: 20px;
+    cursor:pointer;
+    @include ab.respond-to('medium') {
+        margin-left: 0;
+    }
+
+}
+
+.nav-button{
+    display: block;
+    width: 20px;
+    height:20px;
+    margin: 0px 20px;
+    cursor:pointer;
+    & > div {
+        width:100%;
+        height: 3px;
+        margin: 3px 0px;
+        @include ab.bg-primary;
+    }
+    @include ab.respond-to('medium') {
+        display:none;
+    }
 }
 
 .lower-nav {
@@ -37,14 +63,23 @@
     @include ab.bg-white;
     font-weight:600;
     width: 100%;
-    justify-content: center;
+    justify-content: center; 
     & > .wrapper > a {
-        @include ab.text-primary;
-        text-decoration: none;
-        margin: 0px 20px;
-        &:last-child {
-            margin: 0 0 0 20px;
+        display:none;
+    }
+    opacity: 0.9;
+    border-top: 5px solid map-get(ab.$colors, "theme", "primary");
+    @include ab.respond-to('medium') {
+        & > .wrapper > a {
+            display:block;
+            @include ab.text-primary;
+            text-decoration: none;
+            margin: 0px 20px;
+            &:nth-child(7) {
+                margin: 0 0 0 20px;
+            }
         }
+        border-top: none;
     }
 }
 .spacer {
