--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,19 +1,26 @@
 @use 'abstracts';
 @use 'layout';
 @use 'components';
+@use 'pages';
 body,
 html {
   background: map-get(abstracts.$colors, "theme", "background");
   margin: 0;
   padding: 0;
   font-family: map-get(abstracts.$fonts, "primary");
+  color: map-get(abstracts.$colors, "text", "primary");
+}
+p {
+    font-size: 16px;
+    line-height: 1.8em;
 }
 
 .wrapper {
     @include abstracts.width-default;
     @include abstracts.flex-row;
-    justify-content:end;
+    justify-content:flex-end;
     align-items:center;
+    align-self:center;
     text-align:right;
 }
 
