--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,6 +4,7 @@
 @use 'pages';
 body,
 html {
+  min-height: 100vh;
   background: map-get(abstracts.$colors, "theme", "background");
   margin: 0;
   padding: 0;
@@ -11,18 +12,16 @@ html {
   color: map-get(abstracts.$colors, "text", "primary");
 }
 p {
-    font-size: 16px;
-    line-height: 1.8em;
+    margin-top: 0;
+  font-size: 16px;
+  line-height: 1.8em;
 }
 
 .wrapper {
-    @include abstracts.width-default;
-    @include abstracts.flex-row;
-    justify-content:flex-end;
-    align-items:center;
-    align-self:center;
-    text-align:right;
+  @include abstracts.width-default;
+  @include abstracts.flex-row;
+  justify-content: flex-end;
+  align-items: center;
+  align-self: center;
+  text-align: right;
 }
-
-
-
