--- a/styles/pages/_contact.scss
+++ b/styles/pages/_contact.scss
@@ -3,6 +3,8 @@
 .map {
     width:100%;
     height: 400px;
+    margin-bottom: 20px;
+    border-color: map-get(ab.$colors, "theme", "primary");
 }
 
 .contact-info {
