--- a/styles/components/_inputgroup.scss
+++ b/styles/components/_inputgroup.scss
@@ -14,6 +14,7 @@
     border: 1px solid #eaeaea;
     border-radius: 10px;
     box-shadow: 0px 0px 3px #eaeaea;
+    outline: none;
   }
   & > label {
     text-transform: uppercase;
