--- a/styles/components/_teaser.scss
+++ b/styles/components/_teaser.scss
@@ -1,11 +1,71 @@
 @use 'abstracts' as ab;
 .teaser {
+  @include ab.flex-row;
   width: 100%;
   height: 200px;
-  &-lg {
-    height: 400px;
-  }
+  text-overflow: ellipsis;
+  border: 1px solid #eaeaea;
+  box-shadow: 0px 0px 3px #eaeaea;
+  border-radius: 10px;
+  margin: 0;
+  margin: 20px 0px;
   & > img {
+    @include ab.flex-column;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    background: #eaeaea;
+    height: 100%;
+  }
+  & > div {
+    @include ab.bg-white;
+    @include ab.flex-column;
+    min-height: 30%;
     width: 100%;
+    & > * {
+      width: 90%;
+      align-self: center;
+    }
+  }
+}
+.teaser-lg {
+  @include ab.flex-column;
+  min-height: 600px;
+  & > img {
+    @include ab.flex-column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background: #eaeaea;
+    height: 70%;
+  }
+}
+
+.teaser-categories {
+  @include ab.flex-row;
+  margin-top: auto;
+  margin-bottom: 20px;
+}
+
+.teaser-category {
+  margin: 0px 20px;
+  padding: 0 20px;
+  border-radius: 10px;
+  @include ab.flex-row;
+  align-items: center;
+
+  &:first-child {
+    margin-left: 0;
+  }
+  &[data-category="Sports"] {
+    background: #b1b1f0;
+    color: #0000cc;
+  }
+  &[data-category="School"] {
+    color: #287622;
+    background: #a8e0a4;
+  }
+  &[data-category="News"] {
+    color: red;
   }
 }
