--- a/styles/components/_ads.scss
+++ b/styles/components/_ads.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 200px;
   justify-content: center;
+  margin-bottom: 20px;
   align-items: center;
   & > p {
     @include ab.text-primary;
