--- a/styles/pages/_login.scss
+++ b/styles/pages/_login.scss
@@ -1,57 +1,55 @@
 @use 'abstracts' as ab;
 
 .login-container {
-    background: url("../../public/loginbg.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    & > .wrapper {
-        min-height: 100vh;
-        @include ab.respond-to('medium') {
-            justify-content:flex-start;
-        }
-        justify-content:center;
-        align-items: center;
-        z-index: 2;
+  background: url("../../public/loginbg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  & > .wrapper {
+    min-height: 100vh;
+    @include ab.respond-to("medium") {
+      justify-content: flex-start;
     }
-    &::before {
-        content: "";
-        width: 100%;
-        height:100%;
-        position:absolute;
-        opacity: 0.4;
-        z-index: 1;
-        background: rgb(24,105,165);
-        background: linear-gradient(90deg, rgba(24,105,165,1) 0%, rgba(24,105,165,0.6978992280505952) 100%);   
-    }
-    //Do the background here,
-    //then write the gradient over it.
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+  }
+  &::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    opacity: 0.4;
+    z-index: 1;
+    background: rgb(24, 105, 165);
+    background: linear-gradient(
+      90deg,
+      rgba(24, 105, 165, 1) 0%,
+      rgba(24, 105, 165, 0.6978992280505952) 100%
+    );
+  }
+  //Do the background here,
+  //then write the gradient over it.
 }
 .login-box {
-    @include ab.flex-column;
-    width: 360px;
-    height: 360px;
-    background:white;
-    text-align:center;
-    & > input, button, h1, a, label {
-        width: 80%;
-        align-self: center;
-    }
-    & h1, a, label {
-        text-align:left;
-    }
-    & > h1 {
-        text-transform: uppercase;
-        letter-spacing: 5px;
-    }
-    & > label {
-        margin-top: 10px;
-        margin-bottom: 5px;
-    }
-    & > input  {
-        margin-bottom: 10px;
-    }
-    & > a {
-        @include ab.text-theme-primary;
-        text-decoration:none;
-    }
+  @include ab.flex-column;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  border: 1px solid #e3e3e3;
+  box-shadow: 0px 0px 3px #e3e3e3;
+  @include ab.respond-to("medium") {
+    width: 600px;
+    height: 600px;
+  }
+  background: white;
+  text-align: center;
+  & > .input-group, & > button {
+    width: 80%;
+    align-self: center;
+  }
+  & > a {
+    @include ab.text-theme-primary;
+    margin-bottom: 20px;
+    text-decoration: none;
+  }
 }
