Implements backend for add/delete articles (#8)
* Implements the archives system

* Begins work on admin backend

* Adds frontend for admin action pages

* Implements add/delete article backend

Co-authored-by: Trevor Mangrum <tmangrum@Trevors-MacBook-Air.local>
Co-authored-by: Trevor <mangrumtrevor@gmail.com>

--- a/styles/pages/_admin.scss
+++ b/styles/pages/_admin.scss
@@ -16,3 +16,19 @@
     flex-wrap: wrap;
     justify-content:center;
 }
+.admin-item {
+  background:white;
+  height: 100px;
+  @include ab.flex-row;
+  align-items: center;
+  & > h2 {
+    margin-left: 10px;
+  }
+  & > .button {
+    margin-right: 10px;
+    margin-left: auto;
+  }
+}
+.editor {
+  @include ab.bg-white;
+}
