--- a/styles/components/_ads.scss
+++ b/styles/components/_ads.scss
@@ -5,6 +5,9 @@
   background: #eaeaea;
   width: 100%;
   height: 200px;
+  background-size: 100% 100% !important;
+  background-repeat: no-repeat !important;
+
   justify-content: center;
   margin-bottom: 20px;
   align-items: center;
