--- a/styles/components/_teaser.scss
+++ b/styles/components/_teaser.scss
@@ -17,6 +17,7 @@
     width: 40%;
     background: #eaeaea;
     height: 100%;
+    object-fit: contain;
   }
   & > div {
     @include ab.bg-white;
