--- a/styles/pages/_teaser.scss
+++ b/styles/pages/_teaser.scss
@@ -1,5 +1,7 @@
-.teaser-page-image{
-    width: 100%;
-    height: 400px;
-    margin-bottom: 20px;
+.teaser-page-image {
+  width: 100%;
+  height: 400px;
+  margin-bottom: 20px;
+  object-fit: contain;
+  background: #eaeaea;
 }
