--- a/styles/layout/_navigation.scss
+++ b/styles/layout/_navigation.scss
@@ -78,7 +78,6 @@
       margin: 0px 20px;
 
       &:nth-child(5) {
-
         margin: 0 0 0 20px;
       }
     }
@@ -94,20 +93,26 @@
   position: absolute;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   width: 100%;
   height: 100vh;
   background: white;
   transition: 0.3s ease;
   z-index: 1001;
-  & > a:first-child {
-    margin-top: 120px;
+  & > div {
+    padding-top: 120px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    overflow-y: auto;
+    max-height: 100vh;
   }
-  & > a {
+  & > div > a {
     text-decoration: none;
     align-self: flex-end;
     @include ab.text-primary;
     font-size: 20px;
-    margin-right: 40px;
+    margin-right: 20px;
     margin-bottom: 40px;
     transition: 0.4s ease;
     &:hover {
